[gd_scene load_steps=5 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://sound/level-01/level-01-t1.mp3" type="AudioStream" id=2]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://sound/level-01/level-01-t2.mp3" type="AudioStream" id=4]

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="LevelTimer" type="Timer" parent="."]

[node name="WaveTimer" type="Timer" parent="."]

[node name="HUD" parent="." instance=ExtResource( 3 )]

[node name="SoundTrackA" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="SoundTrackB" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="SoundTrackC" type="AudioStreamPlayer" parent="."]

[node name="SoundTrackIntro" type="AudioStreamPlayer" parent="."]

[connection signal="timeout" from="LevelTimer" to="." method="_on_LevelTimer_timeout"]
[connection signal="timeout" from="WaveTimer" to="." method="_on_WaveTimer_timeout"]
[connection signal="finished" from="SoundTrackA" to="." method="_on_SoundTrackA_finished"]
[connection signal="finished" from="SoundTrackB" to="." method="_on_SoundTrackB_finished"]
[connection signal="finished" from="SoundTrackC" to="." method="_on_SoundTrackC_finished"]
